--- a/checkers-game.css
+++ b/checkers-game.css
@@ -1,32 +1,42 @@
+body{
+background-color: rgb(202, 240, 223);
+}
+
 h1,
 h2 {
   text-align: center;
 
   text-decoration: underline;
 }
+
 .table {
   margin: 0 auto;
   margin-top: 100px;
   border: 50px solid rgb(141, 47, 12);
 }
+
 tr {
   margin: 10px;
   border: 1px solid black;
 }
+
 td {
   margin: 0px;
   border: 1px solid black;
   width: 80px;
   height: 80px;
 }
+
 .dark-cell {
   background-color: rgb(196, 93, 56);
   user-select: none;
 }
+
 .light-cell {
   background-color: rgba(00, 00, 00, 0.2);
   user-select: none;
 }
+
 img {
   margin: auto;
   display: block;
@@ -34,9 +44,11 @@ img {
 
   -webkit-user-drag: none; /*Make the images of pieces not draggable*/
 }
+
 .selected {
   background-color: rgb(197, 197, 83);
 }
+
 .possible-move {
   background-color: rgb(211, 163, 67);
 }
